// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form component wrappers formField() with custom properties should match the snapshot 1`] = `
<PropertyNameField
  colWidth="12"
  form={
    Object {
      "data": Object {
        "propertyName": "Property Value",
      },
      "errors": Object {},
    }
  }
  placeholder="Placeholder Text"
>
  <FormField
    className="property-name-field"
    colWidth="12"
    inputId={null}
    label={null}
    path={Array []}
    prop="propertyName"
  >
    <FormGroup
      className="form-field property-name-field"
      colWidth="12"
    >
      <div
        className="form-group col-sm-12 form-field property-name-field"
      >
        <label
          htmlFor="property-name-input"
        >
          Property Name
        </label>
        <PropertyNameInput
          form={
            Object {
              "data": Object {
                "propertyName": "Property Value",
              },
              "errors": Object {},
            }
          }
          placeholder="Placeholder Text"
        >
          <FormInput
            className={null}
            id="property-name-input"
            onChange={[Function]}
            placeholder="Placeholder Text"
            type="text"
            validStatus={null}
            value="Property Value"
          >
            <input
              className="form-control"
              id="property-name-input"
              onChange={[Function]}
              placeholder="Placeholder Text"
              type="text"
              value="Property Value"
            />
          </FormInput>
        </PropertyNameInput>
      </div>
    </FormGroup>
  </FormField>
</PropertyNameField>
`;

exports[`Form component wrappers formField() with default properties should match the snapshot 1`] = `
<PropertyNameField
  form={
    Object {
      "data": Object {
        "propertyName": "Property Value",
      },
      "errors": Object {},
    }
  }
>
  <FormField
    className="property-name-field"
    colWidth={null}
    inputId={null}
    label={null}
    path={Array []}
    prop="propertyName"
  >
    <FormGroup
      className="form-field property-name-field"
      colWidth={null}
    >
      <div
        className="form-group col form-field property-name-field"
      >
        <label
          htmlFor="property-name-input"
        >
          Property Name
        </label>
        <PropertyNameInput
          form={
            Object {
              "data": Object {
                "propertyName": "Property Value",
              },
              "errors": Object {},
            }
          }
        >
          <FormInput
            className={null}
            id="property-name-input"
            onChange={[Function]}
            placeholder=""
            type="text"
            validStatus={null}
            value="Property Value"
          >
            <input
              className="form-control"
              id="property-name-input"
              onChange={[Function]}
              placeholder=""
              type="text"
              value="Property Value"
            />
          </FormInput>
        </PropertyNameInput>
      </div>
    </FormGroup>
  </FormField>
</PropertyNameField>
`;

exports[`Form component wrappers formGroup() should match the snapshot 1`] = `
<FormGroup
  className=""
  colWidth={null}
>
  <MockInput
    form={
      Object {
        "data": Object {
          "propertyName": "Property Value",
        },
        "errors": Object {},
      }
    }
  />
</FormGroup>
`;

exports[`Form component wrappers formInput() with custom properties should match the snapshot 1`] = `
<FormInput
  className={null}
  id="property-name-input"
  onChange={[Function]}
  placeholder=""
  type="text"
  validStatus={null}
  value="Property Value"
/>
`;

exports[`Form component wrappers formInput() with default properties should match the snapshot 1`] = `
<FormInput
  className={null}
  id="property-name-input"
  onChange={[Function]}
  placeholder=""
  type="text"
  validStatus={null}
  value="Property Value"
/>
`;

exports[`Form component wrappers formSubmit() should match the snapshot 1`] = `
<Button
  block={false}
  buttonSize="md"
  buttonStyle="primary"
  className={null}
  disabled={false}
  link={false}
  onClick={[Function]}
  outline={false}
>
  Button Text
</Button>
`;

exports[`Form component wrappers formSubmit() with custom properties should match the snapshot 1`] = `
<Button
  block={false}
  buttonSize="md"
  buttonStyle="dark"
  className={null}
  disabled={false}
  link={false}
  onClick={[Function]}
  outline={false}
>
  Button Text
</Button>
`;
